# pdfstruct

./: LICENSE  README.md  pyproject.toml
benchmarks/: bench_parse.py
examples/: extract_text.py  inspect_objects.py  parse_file.py
pdfstruct/: __init__.py  cli.py  content.py  document.py  errors.py  filters.py  objects.py  outlines.py  parser.py  text.py  tokenizer.py
tests/: test_parser.py  test_text.py  test_tokenizer.py
